--- a/index.ipynb
+++ b/index.ipynb
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {
     "scrolled": true
    },
@@ -278,16 +278,16 @@
     {
      "data": {
       "text/plain": [
-       "'vandelay.com www.'"
+       "'www.vandelay.com'"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "'www. ' 'vandelay.com'# 'www.vandelay.com'"
+    "'www.' + 'vandelay.com'# 'www.vandelay.com'"
    ]
   },
   {
