--- a/index.ipynb
+++ b/index.ipynb
@@ -326,23 +326,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "must be str, not int",
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-18-95a747aafad4>, line 1)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-17-3c175bd0c00c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;34m\"7285553334\"\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;31m# 7285553336\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m: must be str, not int"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-18-95a747aafad4>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    int(\"7285553334\"0 + 2# 7285553336\u001b[0m\n\u001b[0m                    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
-    "\"7285553334\" + 2# 7285553336"
+    "int(\"7285553334\") + 2# 7285553336"
    ]
   },
   {
